--- a/Romanian/main/CloudService.apk/res/values-ro/strings.xml
+++ b/Romanian/main/CloudService.apk/res/values-ro/strings.xml
@@ -22,7 +22,7 @@
     <string name="button_cancel">Anulaţi</string>
     <string name="buy_more_space_b_class">"Conectaţi-vă la mi.com/micloud pentru a obține mai mult spațiu de stocare.
 Aveţi nevoie de un card bancar chinez pentru a achiziționa spațiu de stocare suplimentar."</string>
-    <string name="buy_more_space_c_class">"Această funcție necesită un card bancar din China.
+    <string name="buy_more_space_c_class">"Această funcție necesită un card bancar chinez.
 Pentru a obține mai mult spațiu de stocare, vizitaţi mi.com/micloud."</string>
     <string name="buy_space_expire">Spațiul achiziționat va expira în %s</string>
     <string name="buy_space_expire_concat">%1$s până la %2$s</string>
@@ -209,8 +209,7 @@ la contul dvs. Mi pentru a reactiva Mi Cloud."</string>
     <string name="micloud_dspt_provision">Utilizaţi Mi Cloud pentru a sincroniza datele, localiza dispozitivul și pentru a partaja lucruri prietenilor.</string>
     <string name="micloud_find_device_finish">Realizat</string>
     <string name="micloud_find_device_guide_button">Activați localizarea dispozitivului pe telefon</string>
-    <string name="micloud_find_device_guide_content">"Când schimbați cartela SIM, un mesaj SMS va fi trimis în mod automat
-pentru reactivarea acestei caracteristici!"</string>
+    <string name="micloud_find_device_guide_content">"Când schimbați cartela SIM, un mesaj SMS va fi trimis în mod automat pentru reactivarea acestei caracteristici!"</string>
     <string name="micloud_find_device_guide_fail_reopen">Activați localizarea dispozitivului în Mi Cloud</string>
     <string name="micloud_find_device_guide_fail_sub_net">Verificați conexiunea la rețea și reîncercați.</string>
     <string name="micloud_find_device_guide_fail_sub_timeout">Conexiunea a expirat. Încercați din nou mai târziu.</string>
@@ -225,8 +224,7 @@ pentru reactivarea acestei caracteristici!"</string>
     <string name="micloud_find_device_guide_noti_title_by_app_change_wx">WeChat vă recomandă să activați Localizarea telefonului</string>
     <string name="micloud_find_device_guide_noti_title_by_app_change_zfb">Alipay vă recomandă să activați Localizarea telefonului</string>
     <string name="micloud_find_device_guide_progress">Se pornește localizarea dispozitivului…</string>
-    <string name="micloud_find_device_guide_title">"Conectați-vă la %s pentru a localiza, bloca
-sau șterge datele de pe telefonul dumneavoastră."</string>
+    <string name="micloud_find_device_guide_title">"Conectați-vă la %s pentru a localiza, bloca sau șterge datele de pe telefonul dumneavoastră."</string>
     <string name="micloud_find_device_open_fail">"Nu s-a putut activa localizarea dispozitivului"</string>
     <string name="micloud_find_device_opened">Localizarea dispozitivului este pornită</string>
     <string name="micloud_find_device_opened_content">Localizați dispozitivul accesând %s</string>
