--- a/Romanian/main/MiuiCompass.apk/res/values-ro/strings.xml
+++ b/Romanian/main/MiuiCompass.apk/res/values-ro/strings.xml
@@ -9,6 +9,8 @@
     <string name="altitude_uncalibrate_tip">Nu se poate calibra altitudinea</string>
     <string name="altitude_unit">m</string>
     <string name="angle">%.0f</string>
+    <string name="app_description_content">Aplicația Busolă este utilizată pentru navigație și orientare și vă arată direcția. Asigurați-vă că vă puteți descurca fără aceste caracteristici înainte de a dezinstala această aplicație.</string>
+    <string name="app_description_title">Despre aplicația Busolă</string>
     <string name="app_label">Busolă</string>
     <string name="calibrate_failed">Calibrare altitudine eşuată</string>
     <string name="calibrate_failed_no_location">Calibrare eşuată</string>
