--- a/Romanian/main/SecurityCenter.apk/res/values-ro/strings.xml
+++ b/Romanian/main/SecurityCenter.apk/res/values-ro/strings.xml
@@ -18,7 +18,7 @@
     <string name="STRANGER_BLOCK">Lista blocărilor persoanelor necunoscute</string>
     <string name="Setting_lock">Setări</string>
     <string name="Settings_title_anti_spam">Setări listă blocări</string>
-    <string name="Settings_title_anti_virus">Setări scanare viruşi</string>
+    <string name="Settings_title_anti_virus">Setări scanare de securitate</string>
     <string name="Settings_title_garbage_cleanup">Setări curăţare</string>
     <string name="Settings_title_network_assistants">Setări utilizare date</string>
     <string name="Settings_title_power_center">Setări acumulator</string>
@@ -43,7 +43,7 @@ sau introduceţi parola pentru blocarea aplicațiilor"</string>
     <string name="action_button_text_80_100">Optimizați</string>
     <string name="action_source_sms_title">SMS-uri blocate</string>
     <string name="activity_title_antispam">Listă blocări</string>
-    <string name="activity_title_antivirus">Scanare viruşi</string>
+    <string name="activity_title_antivirus">Scanare de securitate</string>
     <string name="activity_title_apps_manager">Aplicaţii</string>
     <string name="activity_title_auto_start_manager">Pornire automată</string>
     <string name="activity_title_create_shortcut">Gestiune comenzi rapide</string>
@@ -315,6 +315,7 @@ sau introduceţi parola pentru blocarea aplicațiilor"</string>
     <string name="auto_task_notify_task_canceled_title">Acțiunea este anulată</string>
     <string name="auto_task_notify_task_continue_do">Lansați acțiunea</string>
     <string name="auto_task_notify_task_count_down">Acțiunea automată va porni în 5 secunde</string>
+    <string name="auto_task_notify_task_exit_task">Anulați sarcina</string>
     <string name="auto_task_operation_airplane_mode">Modul Avion</string>
     <string name="auto_task_operation_auto_brightness">Luminozitate automată</string>
     <string name="auto_task_operation_bluetooth">Bluetooth</string>
@@ -609,7 +610,7 @@ sau introduceţi parola pentru blocarea aplicațiilor"</string>
     <string name="dialog_app_roaming_title">Roamingul internațional nu este activat pentru %1$s</string>
     <string name="dialog_msg_auto_start_declare">Unele aplicații pot indica în mod greșit că MIUI le-a împiedicat să pornească. Verificați permisiunile care au fost acordate aplicațiilor individuale în Setări > Aplicații.</string>
     <string name="dialog_msg_stop_paysafety_scan">Opriți verificarea securității plaților?</string>
-    <string name="dialog_msg_stop_virus_scan">Opriți scanarea de viruşi înainte de a fi terminată?</string>
+    <string name="dialog_msg_stop_virus_scan">"Opriți scanarea de securitate înainte de a fi terminată?"</string>
     <string name="dialog_remobe_luckymoney_cancle">Vechi</string>
     <string name="dialog_remobe_luckymoney_ok">Nou</string>
     <string name="dialog_remove_luckymoney">Puteți utiliza noul asistent Plicuri roșii intern sau îl puteți folosi pe cel deja instalat. Pe care îl preferați?</string>
@@ -618,7 +619,7 @@ sau introduceţi parola pentru blocarea aplicațiilor"</string>
     <string name="dialog_title_attention">Atenție</string>
     <string name="dialog_title_auto_start_declare">Despre pornirea automată</string>
     <string name="dialog_title_stop_paysafety_scan">Opriți</string>
-    <string name="dialog_title_stop_virus_scan">Opriţi scanare viruşi</string>
+    <string name="dialog_title_stop_virus_scan">Opriţi scanarea de securitate</string>
     <string name="disable_air_mode">Dezactivaţi modul Avion mai întâi</string>
     <string name="dlg_add_blacklist">Blocați acest număr?</string>
     <string name="dlg_add_blacklist_title">Adăugați în lista blocărilor</string>
@@ -757,6 +758,9 @@ sau introduceţi parola pentru blocarea aplicațiilor"</string>
     <string name="handle_text_cache">Cache</string>
     <string name="handle_text_memory">Memorie</string>
     <string name="handle_text_system">Sistem</string>
+    <string name="handle_title_network">Securitate Wi-Fi</string>
+    <string name="handle_title_pay_env">Mediu de plată</string>
+    <string name="handle_title_privacy">Securitate de confidențialitate</string>
     <string name="header_info_scan_progress">%d%%</string>
     <string name="help_label">Ajutor</string>
     <string name="hide_mode_app_background_setting_text">Economisire utilizare acumulator de către aplicații</string>
@@ -767,11 +771,20 @@ sau introduceţi parola pentru blocarea aplicațiilor"</string>
     <string name="hints_auto_start_warning_info">Dacă restricţionaţi pornirea automată, unele aplicații și servicii nu vor putea primi notificări.</string>
     <string name="hints_cleanning_done">Scanare încheiată cu succes</string>
     <string name="hints_cleanning_text">Curăţare…</string>
-    <string name="hints_handle_item_text_risk">%d</string>
+    <string name="hints_handle_item_text_risk">Pericol</string>
     <string name="hints_handle_item_text_safe">Sigur</string>
-    <string name="hints_handle_item_text_virus">%d</string>
+    <string name="hints_handle_item_text_virus">Pericol</string>
     <string name="hints_input_roaming_daily_limit">Introduceți limita de utilizare a datelor</string>
     <string name="hints_last_virus_scan_none">Nu a fost scanat înainte</string>
+    <string name="hints_last_virus_scan_risk">Scanat cu %d zile înainte: Suspect</string>
+    <string name="hints_last_virus_scan_safe">Scanat cu %d zile înainte: Sigur</string>
+    <string name="hints_last_virus_scan_today_risk">Scanat astăzi: Suspect</string>
+    <string name="hints_last_virus_scan_today_safe">Scanat astăzi: Sigur</string>
+    <string name="hints_last_virus_scan_today_virus">Scanat astăzi: Periculos</string>
+    <string name="hints_last_virus_scan_virus">Scanat cu %d zile înainte: Periculos</string>
+    <string name="hints_last_virus_scan_yesterday_risk">Scanat ieri: Suspect</string>
+    <string name="hints_last_virus_scan_yesterday_safe">Scanat ieri: Sigur</string>
+    <string name="hints_last_virus_scan_yesterday_virus">Scanat ieri: Periculos</string>
     <string name="hints_loading_text">Încărcare…</string>
     <string name="hints_need_quick_clean">Găsiți și eliminați fișierele periculoase</string>
     <string name="hints_need_quick_scan">Scanare rapidă recomandată</string>
@@ -782,7 +795,9 @@ sau introduceţi parola pentru blocarea aplicațiilor"</string>
     <string name="hints_risk_app_list_item_summary">aplicaţie</string>
     <string name="hints_risk_descx_title">Descriere:</string>
     <string name="hints_risk_name_title">Risc:</string>
+    <string name="hints_scan_danger_result">risc găsit, reparați acum</string>
     <string name="hints_scan_progress">Progres: %d</string>
+    <string name="hints_scan_result_no_finish">Scanarea este încheiată. Atingeți pentru a reporni.</string>
     <string name="hints_scan_result_phone_safe">Totul arată bine</string>
     <string name="hints_scan_result_risk">Riscuri detectate</string>
     <string name="hints_scan_result_safe">Sigur</string>
@@ -1028,7 +1043,7 @@ răspunsul operatorului"</string>
     <string name="menu_restore">Restaurați în căsuța de mesaje</string>
     <string name="menu_sms">Trimiteți mesaj</string>
     <string name="menu_text_antispam">Listă blocări</string>
-    <string name="menu_text_antivirus">Scanare viruşi</string>
+    <string name="menu_text_antivirus">Scanare de securitate</string>
     <string name="menu_text_garbage_cleanup">Curăţare</string>
   <string name="menu_text_garbage_cleanup_danger">mai mult de %s</string>
     <string name="menu_text_license_manager">Permisiuni</string>
@@ -1279,12 +1294,12 @@ C"&lt;/b&gt;"itiți instrucțiunile care însoțesc router-ul și resetaţi-l la
     <string name="power_center_time_to_boot">Ora de pornire</string>
     <string name="power_center_time_to_shutdown">Ora de oprire</string>
     <string name="power_center_title">Energie</string>
+    <string name="power_consume_hardware_total_format">Hardware: %s</string>
     <string name="power_consume_other">Alte aplicaţii</string>
     <string name="power_consume_rank_hardware">Hardware</string>
     <string name="power_consume_rank_software">Aplicaţii</string>
     <string name="power_consume_rank_title">Utilizare acumulator</string>
-    <string name="power_consume_total_hardware">Hardware: %s</string>
-    <string name="power_consume_total_software">Aplicații: %s</string>
+    <string name="power_consume_software_total_format">Aplicații: %s</string>
     <string name="power_customize_giveup_change">Renunţaţi la modificări?</string>
     <string name="power_dialog_cancel">Anulaţi</string>
     <string name="power_dialog_ok">OK</string>
@@ -1488,15 +1503,14 @@ Pe durata calibrării MIUI va trimite un mesaj text operatorului pentru a obțin
     <string name="resource_usb_install">Instalare prin USB</string>
     <string name="result_autoscan_header">Monitorizare plăți</string>
     <string name="result_autoscan_info">Monitorizați în mod automat mediul sistemului atunci când aplicațiile de plăți sunt pornite</string>
-    <string name="result_sign_header">Au fost găsite %d aplicații neoficiale</string>
     <string name="result_sms_header">Au fost găsite riscuri în aplicația de mesagerie</string>
     <string name="result_sms_info_antispam">Activați funcția Listă blocări pentru a preveni accesarea site-urilor cu risc</string>
     <string name="result_sms_info_auth">Restricționați accesul aplicațiilor terțe la codurile de verificare.</string>
 <string name="result_sms_title_antispam">Amenințare de URL cu risc trimis prin SMS</string>
     <string name="result_sms_title_auth">Riscul fraudelor financiare prin SMS există</string>
-    <string name="result_virus_header">Au fost găsiți %d viruși și aplicații nesigure</string>
     <string name="result_wifi_header">Rețeaua Wi-Fi prezintă probleme de securitate</string>
     <string name="right_precent">100%</string>
+    <string name="risk_count_suffix"/>
     <string name="roaming_allow_network_dialog_title">Permiteți utilizarea datelor în roaming?</string>
     <string name="roaming_limit_dialog_message">A fost atinsă limita zilnică a datelor în roaming.</string>
     <string name="roaming_limit_network_notification_body">Apăsați pentru a vizualiza rețelele de date disponibile</string>
@@ -1761,6 +1775,7 @@ Pe durata calibrării MIUI va trimite un mesaj text operatorului pentru a obțin
     <string name="suffix_virus_count_bottom">total</string>
     <string name="suffix_virus_count_top">riscuri</string>
     <string name="suggest_app_tolock">Sugestii</string>
+    <string name="suggest_scan_again">Vă propunem o scanare completă pentru asigurarea securității.</string>
     <string name="summary_app_lock_disable">Protejați-vă datele cu Blocarea aplicațiilor</string>
     <string name="summary_auto_update">MIUI va selecta ora cea mai potrivită pentru descărcarea și instalarea actualizărilor.</string>
     <string name="summary_cleaner_cloudscan">Încărcați și comparați numele de dosare cu definițiile on-line</string>
@@ -1781,7 +1796,6 @@ Pe durata calibrării MIUI va trimite un mesaj text operatorului pentru a obțin
     <string name="summary_garbage_clean">Curățați memoria cache pentru a obține mai mult spațiu</string>
     <string name="summary_garbage_lib">Utilizați cele mai recente definiții pentru a elimina programele spyware, adware și alte reziduuri nedorite</string>
     <string name="summary_install_virus">Verificare aplicații pentru viruși înainte de instalare</string>
-    <string name="summary_live_talk_purchase">Doar o,o5 RON/minut pentru apelurile locale.</string>
     <string name="summary_mifi_insurance">Achiziționați o asigurare de înlocuire de un an care poate acoperi daunele hardware</string>
     <string name="summary_miui_update">Actualizare disponibilă pentru %s.</string>
     <string name="summary_mms">Filtrare mesaje nedorite (vânzări, anunțuri, etc.)</string>
@@ -1936,7 +1950,6 @@ Dacă nu dumneavoastră ați modificat versiunea MIUI în vreun fel, asigurați-
     <string name="title_install_virus_no">Monitorizare instalare dezactivată</string>
     <string name="title_install_virus_yes">Monitorizare instalare activată</string>
     <string name="title_limit_traffic_per_day">Limita de utilizare zilnică a datelor</string>
-    <string name="title_live_talk_purchase">Suplimentați acum</string>
     <string name="title_mifi_insurance">Garanție extinsă</string>
     <string name="title_miui_update">Actualizare disponibilă</string>
     <string name="title_mms_no">Filtrare mesaje dezactivată</string>
@@ -2079,6 +2092,7 @@ Datele rămase includ datele reportate din luna anterioară."</string>
     <string name="user_define_title">Adăugați reguli</string>
     <string name="virus_ad_icon_text">Reclamă</string>
     <string name="virus_already_update">Definițiile virușilor sunt actualizate</string>
+    <string name="virus_auto_update_engine">Actualizare automată：%s</string>
     <string name="virus_dp_update_title">Actalizarea definițiilor</string>
     <string name="virus_scan">Scanare pentru viruși</string>
     <string name="virus_scan_process_pre">%</string>
