--- a/Romanian/main/Mms.apk/res/values-ro/strings.xml
+++ b/Romanian/main/Mms.apk/res/values-ro/strings.xml
@@ -162,6 +162,7 @@
     <string name="expire_on">Expiră la: %s</string>
     <string name="exporting_progress_private_message">Exportul mesajelor…</string>
     <string name="fail_to_add_attachment">"Nu s-a putut adăuga atașamentul"</string>
+    <string name="fail_to_view_attachment">atașamentul nu este disponibil</string>
     <string name="failed_to_add_media">Nu puteţi adăuga acest %1$s la mesajul dvs.</string>
     <string name="failed_to_resize_image">Fotografia nu a fost redimensionată.</string>
     <string name="fake_cell_alert_hint">Se pare că acest mesaj a fost trimis de pe un număr de telefon diferit față de cel afișat. Tratați cu precauție mesajele care vă solicită date financiare.</string>
@@ -190,7 +191,6 @@
     <string name="from_label">"De la: "</string>
     <string name="from_pkg_name">De la aplicația:</string>
     <string name="group_message">Mesaje de grup</string>
-    <string name="group_message_failed_title">Trimiterea la %d contacte a eşuat</string>
     <string name="group_resend_message">Retrimiteţi (%d)</string>
     <string name="group_verification_codes_summary">Grupează în mod automat toate parolele de unică utilizare</string>
     <string name="group_verification_codes_title">Grupare mesaje OTP</string>
@@ -526,7 +526,6 @@
     <string name="send_signature_confirm_dialog_title">Trimiteţi mesajul</string>
     <string name="send_sms">Trimiteţi mesajul</string>
     <string name="send_to">"Către: "</string>
-    <string name="send_to_count">Au fost trimise %1$s mesaje</string>
     <string name="send_to_index_contact">%1$s/%2$s</string>
     <string name="sent_at_time">Trimis la: %1s</string>
     <string name="sent_label">"Trimis: "</string>
@@ -598,9 +597,7 @@
     <string name="switch_to_menu">Mod Meniu</string>
     <string name="text_in_popup_saved_to_clipboard">Copiat în clipboard</string>
     <string name="text_message">Mesaj text</string>
-    <string name="timed_message_expired_title">%d mesaje temporizate nu au fost trimise</string>
     <string name="timed_message_expired_title_2">Le trimiteţi acum?</string>
-    <string name="timed_message_in_total">" (%d mesaje)"</string>
     <string name="timed_message_to">către</string>
     <string name="title_allow_network_access">Actualizează informațiile în mod automat</string>
     <string name="title_collapse_sp_messages">Grupaţi notificările</string>
@@ -612,7 +609,6 @@
     <string name="title_timed_message_dialog">Setaţi mesajul temporizat</string>
     <string name="title_use_gsm_alphabet">Utilizați alfabetul GSM</string>
     <string name="to_address_label">"Către: "</string>
-    <string name="to_count">%d destinatari</string>
     <string name="to_label">"Pentru "</string>
     <string name="to_send_wrapper">Se va trimite la %s</string>
     <string name="today">Astăzi</string>
