--- a/Romanian/main/miui.apk/res/values-ro/strings.xml
+++ b/Romanian/main/miui.apk/res/values-ro/strings.xml
@@ -412,6 +412,7 @@
     <string name="heavenly_stems_yi">乙</string>
     <string name="hybrid_provider">Furnizată de %1$s .</string>
     <string name="im">IM</string>
+    <string name="immersion_button_close_description">închideți</string>
     <string name="instruction">Instrucțiuni</string>
     <string name="label">MIUI SDK</string>
     <string name="midnight">AM</string>
@@ -475,6 +476,7 @@
     <string name="saturday">Sâmbătă</string>
     <string name="saturday_short">Sâm</string>
     <string name="saturday_shortest">S</string>
+    <string name="search_input_description">căutați</string>
     <string name="select_all">Selectaţi tot</string>
     <string name="select_item">Selectare elemente</string>
     <string name="send">Trimiteţi</string>
